--- a/.github/workflows/publish-site-changes.yml
+++ b/.github/workflows/publish-site-changes.yml
@@ -1,6 +1,10 @@
 name: Publish Site
 run-name: Publishing ${{ github.sha }}
 on: [push]
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 jobs:
   # Build job
   build:
